tests/fixtures/fail/add_trait_malformed_schema.sali
let Add(Rhs: type) = trait {
  let Output: type
  let add(borrow self)(move rhs: Rhs): Output
}

let Number = struct(value: i32)

extend Number: Add(Number) {
  let Output = i32
  let add(borrow self)(move rhs: Number): i32 = self.value + rhs.value
}

let main(): i32 = Number(40) + Number(2)
